# Q_camera_SDK_sony

./: .gitignore  CMakeLists.txt  README.md
docs/: 24fps_resolution_summary_2026-03-31.md  4k30_investigation_report_2026-03-31.md  ATP_결과_보고서_2026-03-31.md  ATP_테스트_문서.md  ETIO_트리거_신호_연동_개발_계획서.docx  ETIO_트리거_연동_기능_검증_체크리스트.md  SDK_User_Manual.md  개발_변경_정리_2026-04-01.md  내일_시작_체크리스트.md  내일_작업계획.md  성과물_목록.md  트리거_연동_개발계획서_초안.md
reports/: 24fps_resolution_summary_2026-03-31.md  mjpeg_resolution_test_7_8_2026-03-31.txt  nv12_resolution_test_2026-03-31.txt
scripts/windows/: build_all.cmd  build_managed.cmd  build_native.cmd  doctor.cmd  run_cli_fps.cmd  run_ui_stitch_all.cmd
src/CameraCli/: CameraCli.csproj  Program.cs
src/CameraCore/: CameraCore.cpp
src/CameraDemo/: App.xaml  App.xaml.cs  CameraDemo.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/CameraSDK/: CameraSDK.cs
src/include/: CameraSDK.h
